# sand-sim

./: .clang-format  CMakeLists.txt  README.md  flake.nix
scripts/: generate-mapping.py
src/: main.cu  simulation.cu  simulation.cuh  simulation.h  transition_table.cpp  transition_table.h
